# openradar_mmwave_utils

./: .gitignore  README.md  start_and_record.lua
docs/: install.md  mmwavelink_setup.md
setup_dca_1000/: CMakeLists.txt  cf.json  cli_setup.cpp
setup_dca_1000/Common/DCA1000_API/: rf_api.h
setup_dca_1000/RF_API/: configdatarecv.cpp  extern.h  recorddatarecv.cpp  rf_api.cpp
setup_radar/: CMakeLists.txt  mmwaveconfig.txt
setup_radar/FTDILib/SourceCode/: mmwl_port_ftdi.cpp  mmwl_port_ftdi.h
setup_radar/FTDILib/SourceCode/vs/: mmwl_port_ftdi.vcxproj
setup_radar/firmware/: xwr22xx_metaImage.h
setup_radar/ti/control/mmwavelink/: mmwavelink.h
setup_radar/ti/control/mmwavelink/docs/doxygen/html/: annotated.html  classes.html  dir_118ff5efaebde8ab2c0e3042bd5744e3.html  dir_56ea320f36428fc096e6ea8f45d8dae0.html  dir_df71c6939ebc806978a05d8ef204119e.html  dir_fea941005e406bc3aa49d475ee615bf0.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  functions_t.html  functions_v.html  functions_vars.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  functions_vars_e.html  functions_vars_f.html  functions_vars_g.html  functions_vars_h.html  functions_vars_i.html  functions_vars_l.html  functions_vars_m.html  functions_vars_n.html  functions_vars_o.html  functions_vars_p.html  (+221 more)
setup_radar/ti/control/mmwavelink/include/: rl_device.h  rl_driver.h  rl_messages.h  rl_monitoring.h  rl_sensor.h
setup_radar/ti/control/mmwavelink/makefiles/: setenv.bat  setenv.sh
setup_radar/ti/control/mmwavelink/src/: rl_device.c  rl_driver.c  rl_monitoring.c  rl_sensor.c
setup_radar/ti/example/mmwavelink_example_nonos/: map_outputs.py  mmw_config.c  mmw_config.h  mmw_example_nonos.c  mmw_example_nonos.h  mmwaveconfig.txt  mmwavelink_example_nonos.vcxproj  readme.txt  rl_nonos.cpp
setup_radar/ti/example/platform/mmwlstudio/: rls_studio.h
